tests/files/type_checker_tests/should_fail/045.cmdr
//Should fail when exponentiate setting incompatible types
x = 3;
x **= true;
